                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 09-09-2005 fixed: when playing an audio file with the dvdplayer, switching between visualisation and menu resulted in a crash
 - 09-09-2005 added: libfaad to dvdplayer
 - 09-09-2005 fixed: replay gain info from an id3v2 tag was never read
 - 09-09-2005 changed: replaced id3lib with libid3tag (much smaller and better performance), needs libid3tag.dll in q:\system
 - 09-09-2005 fixed: replay gain info created with MP3gain was never read
 - 08-09-2005 added: NSF (Nintendo Sound File) codec to paplayer. Based on nosefart.
 - 08-09-2005 updated: Dutch language file (Thnx to nightspirit)
 - 08-09-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 08-09-2005 updated: Spanish language file (Thnx to jose_t)
 - 08-09-2005 updated: Finnish language file (Thnx to jutski)
 - 08-09-2005 updated: Korean language file (Thnx to AkoXko)
 - 08-09-2005 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 08-09-2005 updated: Norwegian language file (Thnx to vnm)
 - 08-09-2005 updated: German language file
 - 07-09-2005 changed: made section unloading delayed same as dll unloading. (speeds up filelisting over daap://)
 - 07-09-2005 added: MP2 audio for Paplayer
 - 07-09-2005 added: MP3 decoder based on libMAD for Paplayer, this replaces winamp's in_mp3.dll for mp3 decoding. If you still want to use in_mp3.dll instead rename in_mp3.dll to MADCodec.dll
 - 07-09-2005 added: Startwindow examples to xboxmediacenter.xml
 - 07-09-2005 changed: increased progressbar timeout to 3 seconds on startup instead of 2
 - 07-09-2005 fixed: audio stutters when playback is started.