@@ -1100,7 +1100,7 @@
   <string><id>13297</id><value>Xbox is not Connected. Check Network Settings.</value></string>
   <string><id>13298</id><value>XBLIVE Key:</value></string>
 
-  <string><id>15213</id><value>[PLACEHOLDER]</value></string>
+  <string><id>15213</id><value>Play Using...</value></string>
   <string><id>15214</id><value>Use Smoothed A/V Syncronization</value></string>
   <string><id>15215</id><value>Hide File Names in Thumbs View</value></string>
 
