@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 10-09-2005 added: ability to select player for music and video from context menu
  - 09-09-2005 fixed: when playing an audio file with the dvdplayer, switching between visualisation and menu resulted in a crash
  - 09-09-2005 added: libfaad to dvdplayer
  - 09-09-2005 fixed: replay gain info from an id3v2 tag was never read
